--- a/main.html
+++ b/main.html
@@ -14,7 +14,10 @@
 <body>
     <header>
         <img id="seoulMate" src="./image/SeoulMate2.png">
-        <img id="button" src="./image/join_login2.png">
+        <span class="button">
+            <a id ="join" href="#" >회원가입</a>
+            <a id = "login" href="#" >로그인</a>
+        </span>
     </header>
     <nav id="menu">
         <ul>
