메인페이지 수정(대략적인 게시글 추가, footer공간 추가에 따른 전체적인 수정)

--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='common_filter.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='common_buttonChkbox.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main_content.css'>
     <script src='main.js'></script>
     <style>
         
@@ -17,7 +18,7 @@
 <body>
     <header>
         <div class = "home">
-        <img id="seoulMate" src="./image/SeoulMate2.png">
+        <a href='main.html'><img id="seoulMate" src="./image/SeoulMate2.png"></a>
         <span class="button">
             <a id ="join" href="#" >회원가입</a>
             <a id = "login" href="#" >로그인</a>
@@ -101,7 +102,49 @@
         </div>
     </form>
     </div>
-    </main>
+    <section id="content">
+        <article>
+            <h2> 한적한 길따라 산책 어떠세요? </h2>
+            <div class = "preview">
+                <span class = "thumbnail_txt"> 걷기좋은 서울의 골목</span>
+                <div class = "thumbnail_img" style="background-image:url('image/seochon.jpg')"></div>
+                <ul class="ul_course">
+                    <span class="vertical_line"></span>
+                    <li class="li_course"> 경복궁역 2번출구 </li>
+                    <li class="li_course"> 이상의집 </li>
+                    <li class="li_course"> 대오서점 </li>
+                    <li class="li_course"> 박노수가옥 </li> <small>총 거리:2.4km</small>
+                </ul>
+            </div>
+            <div class = "preview">
+                <span class = "thumbnail_txt"> 도심 속의 광장, 광화문 </span>
+                <div class = "thumbnail_img" style="background-image:url('image/gwanhwamun.jpg')"></div>
+                <ul class="ul_course">
+                    <span class="vertical_line"></span>
+                    <li class="li_course"> 경복궁역 2번출구<br> </li>
+                    <li class="li_course"> 이상의집<br> </li>
+                    <li class="li_course"> 대오서점<br> </li>
+                    <li class="li_course"> 박노수가옥<br> </li> <small>총 거리:2.4km</small>
+                </ul>
+            </div>
+            <div class = "preview">
+                <span class = "thumbnail_txt"> 현재와 과거의 공존, 북촌 한옥마을 </span>
+                <div class = "thumbnail_img" style="background-image:url('image/timothy-ries-Wko1Ld0-z9U-unsplash.jpg')"></div>
+                <ul class="ul_course">
+                    <span class="vertical_line"></span>
+                    <li class="li_course"> 경복궁역 2번출구<br> </li>
+                    <li class="li_course"> 이상의집<br> </li>
+                    <li class="li_course"> 대오서점<br> </li>
+                    <li class="li_course"> 박노수가옥<br> </li> <small>총 거리:2.4km</small>
+                </ul>
+            </div>
+        </article>
+    </section>
+</main>
+<footer>
+    <p>&copy; 서울여행길잡이 SeoulMate <br>
+    이메일 : team1_ezen21@google.com</p>
+</footer>
 
 </body>
 </html>
