--- a/main.html
+++ b/main.html
@@ -15,16 +15,16 @@
 <body>
     <header>
         <div class = "home">
-        <a href='main.html'><img id="seoulMate" src="./image/SeoulMate2.png"></a>
-        <span class="button">
-            <a id ="join" href="#" >회원가입</a>
+            <a class="seoulMate" href='main.html'><img class="seoulMate" src="./image/SeoulMate2.png"></a>
+        </div>
+        <span class="top_button">
+            <a id = "join" href="#" >회원가입</a>
             <a id = "login" href="#" >로그인</a>
         </span>
-        </div>
         <nav id="menu">
             <ul id="menu_ul">
                 <li class="menu_li"><a href="#"> 01 추천여행코스 </a></li>
-                <li class="menu_li"><a href="#"> 02 인기여행지 </a></li>
+                <li class="menu_li"><a href="places_main.html"> 02 인기여행지 </a></li>
                 <li class="menu_li"><a href="#"> 03 자유게시판 </a></li>
                 <li class="menu_li"><a href="#"> 04 공지사항 </a></li>
                 <li class="menu_li"><a href="#"> 05 마이페이지 </a></li>
@@ -136,7 +136,7 @@
                 </ul>
             </div>
         </article>
-        <hr>
+        <hr class="hr_divider">
         <article id="section2_place">
             <h2> 이달의 인기 여행지 </h2>
             <div class = "preview">
