--- a/places_main.html
+++ b/places_main.html
@@ -15,12 +15,12 @@
 <body>
     <header>
         <div class = "home">
-        <a href='main.html'><img id="seoulMate" src="./image/SeoulMate2.png"></a>
-        <span class="button">
-            <a id ="join" href="#" >회원가입</a>
+            <a class="seoulMate" href='main.html'><img class="seoulMate" src="./image/SeoulMate2.png"></a>
+        </div>
+        <span class="top_button">
+            <a id = "join" href="#" >회원가입</a>
             <a id = "login" href="#" >로그인</a>
         </span>
-        </div>
         <nav id="menu">
             <ul id="menu_ul">
                 <li class="menu_li"><a href="#"> 01 추천여행코스 </a></li>
@@ -32,6 +32,10 @@
         </nav>
     </header>
     <main>
+        <div class="main_title">
+        <h1> 인기여행지 </h1>
+        </div>
+        <hr class="hr_title">
         <article id="section2_place">
             <h2> 이달의 인기 여행지 </h2>
             <div class = "preview">
