구조변경 및 접기버튼

--- a/html/districtPopup.html
+++ b/html/districtPopup.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset='utf-8'>
     <title>지역선택 팝업</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='popup.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/common.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/place.css'>
     <script src='main.js'></script>
 </head>
 <body>
 <div id="districtWrap" class="wrap_pop" style="display:block; position:absolute;">
-    <div id="districtPop" class="pop" style="position:absolute; left:50%; top:795.286px;">
+    <div id="districtPop" class="pop" style="position:absolute; left:50%; top:100.286px;">
         <div class="tit"> <h2> <b> 여행지 </b> 선택</h2>
             <button type="button" class="btn_close1" onclick="MainTabPopup.layerHide('spArea')";> 닫기 </button></div>
         <div id="districtBox" class="choice">
