--- a/html/main.html
+++ b/html/main.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title> HOME </title>
+    <title> HOME </title> 
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='common_header.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='common_filter.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='common_buttonChkbox.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main_content.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/common.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/place.css'>
     <script src='main.js'></script>
 </head>
 <body>
     <header>
         <div class = "home">
-            <a class="seoulMate" href='main.html'><img class="seoulMate" src="./image/SeoulMate2.png"></a>
+            <a class="seoulMate" href='main.html'><img class="seoulMate" src="../image/SeoulMate2.png"></a>
         </div>
         <span class="top_button">
             <a id = "join" href="#" >회원가입</a>
@@ -35,13 +34,14 @@
     <div class="filterOutWrap">
     <form name="schInfo" id="schInfo" style="display: block;" method="POST">
         <h2 class="tit_sch"> <b>맞춤형</b> 여행정보 찾기</h2>
+        <input type="checkbox" class="unfoldBtn" id="unfoldBtn"><label for="unfoldBtn" class="labelBtn" onclick=""><img src="../image/unfold.png" alt=""></label>
         <div class ="filterWrap">
             <ul class="filter_ul">
                 <li><span class="title"><label for="destination"> 지역 </label></span>
                     <div class="tripSite">
                     <input type="text" id="destination" placeholder="여행지 선택" readonly="">
                     <!--onclick은 자바스크립트-->
-                    <button type="button" id="dstBtn" class="btn focus btn_sch" onclick="SitePopup.layerShow('area','areaBtn');"><span class="web_only">여행지 </span>선택</button></div>
+                    <button type="button" id="dstBtn" class="btn schBtn" onclick="SitePopup.layerShow('area','areaBtn');"><span class="web_only">여행지 </span>선택</button></div>
                 </li>
                     <!--지역선택은은 하나의 input태그와 연결되므로 label-input으로 묶음-->
                 <li class="line2"><span class="title"><label> 여행목적 </label></span>
@@ -57,15 +57,15 @@
                         <span class="set"><input type="checkbox" name="tripStyle" id="chk08" value="8"><label for="chk08"> 역사/문화 </label></span>
                     </div>
                 </li>
-                <li class= "line2"><span class="title"><label for="tripDays"> 여행기간 </label></span>
+                <li><span class="title"><label for="tripDays"> 여행기간 </label></span>
                     <div class="tripDays"> 
                         <span class="set"><input type="checkbox" name="tripDays" id="chk09" value="9"><label for="chk09"> 당일치기 </label></span>
                         <span class="set"><input type="checkbox" name="tripDays" id="chk10" value="10"><label for="chk10"> 1박2일 </label></span>
                         <span class="set"><input type="checkbox" name="tripDays" id="chk11" value="11"><label for="chk11"> 2박3일 </label></span>
-                        <span class="set"><input type="checkbox" name="tripDays" id="chk12" value="12"><label for="chk12"> 3박4일 </label></span>
-                        <br>
-                        <span id="choosePrd"> <span class="set"><input type="checkbox" name="tripDays" id="chk13" value="13"><label for="chk13"> 직접선택 </label></span>
-                        <span class="setDate" id="set1stDate"><label class="date">시작일 <input class="dateInput" type="date" name="startDate" value="시작일"></label></span> <span class="setDate"><label class="date">종료일 <input class="dateInput" type="date" name="finalDate" value="종료일"></label></span></span>
+                        <span class="set"><input type="checkbox" name="tripDays" id="chk12" value="12"><label for="chk12"> 3박이상 </label></span>
+                        <!-- <br> -->
+                        <!-- <span id="choosePrd"> <span class="set"><input type="checkbox" name="tripDays" id="chk13" value="13"><label for="chk13"> 직접선택 </label></span> -->
+                        <!-- <span class="setDate" id="set1stDate"><label class="date">시작일 <input class="dateInput" type="date" name="startDate" value="시작일"></label></span> <span class="setDate"><label class="date">종료일 <input class="dateInput" type="date" name="finalDate" value="종료일"></label></span></span> -->
                         <!-- <input type="text" id="tourExptYmd" class="useDatepicker hasDatepicker" title="예정일자 (입력예시 : 20210101)"> -->
                         <!-- <button type="button" id="dstBtn" class="btn focus btn_sch" onclick="SitePopup.layerShow('area','areaBtn');"><span class="web_only"> </span></button> -->
                     </div>
@@ -92,8 +92,8 @@
                 <li><span class="title"><label for="tripKeyword"> 추가 키워드 </label></span>
                     <div class="tripKeyword">
                         <input type="text" id="tripKeyword" placeholder="기타 키워드 입력(선택사항)">
-                        <input type="submit" value="검색">
-                        <input type="reset" value="입력 초기화"></div>
+                        <input type="reset" class="btn resetBtn" value="입력 초기화">
+                        <input type="submit" class="btn submitBtn" value="검색"></div>
                 </li>
             </ul>
         </div>
@@ -104,7 +104,7 @@
             <h2> 도심 속 여유를 찾아, 산책하기 좋은 서울의 공간 </h2>
             <div class = "preview">
                 <span class = "thumbnail_txt"> 600년의 역사가 숨쉬는 삼청동 </span>
-                <div class = "thumbnail_img" style="background-image:url('image/samcheong.jpg')"></div>
+                <div class = "thumbnail_img" style="background-image:url('../image/samcheong.jpg')"></div>
                 <ul class="ul_course">
                     <span class="vertical_line"></span>
                     <li class="li_course"> 안국역 1번 출구 </li>
@@ -126,7 +126,7 @@
             </div>
             <div class = "preview">
                 <span class = "thumbnail_txt"> 걷기좋은 서울의 골목, 서촌으로 </span>
-                <div class = "thumbnail_img" style="background-image:url('image/timothy-ries-Wko1Ld0-z9U-unsplash.jpg')"></div>
+                <div class = "thumbnail_img" style="background-image:url('../image/timothy-ries-Wko1Ld0-z9U-unsplash.jpg')"></div>
                 <ul class="ul_course">
                     <span class="vertical_line"></span>
                     <li class="li_course"> 경복궁역 2번출구<br> </li>
@@ -146,7 +146,7 @@
             </div>
             <div class = "preview">
                 <span class = "thumbnail_txt"> 창덕궁 </span>
-                <div class = "thumbnail_img" style="background-image:url('image/changdeokPalace.jpg')">
+                <div class = "thumbnail_img" style="background-image:url('../image/changdeokPalace.jpg')">
                     <a class="hover_place" href="main.html"><ul class="hover_place_ul"><li class="hover_place_li">종로구</li><li class="hover_place_li">고궁</li></ul></a></div>
                 
             </div>
